# pv-panel-defect-inspector

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  vcpkg-configuration.json  vcpkg.json
core/detection/: detect_video.py  split_dataset.py  train_yolo.py
core/video_processing/: fps_reducer.py  img_utils.py  thermal_rgb_aligner.py  video_synchronizer.py
data/metadata/: rgb.json  rgb_frames.json  thermal.json  thermal_frames.json
src/core/: main.cpp
src/sandbox/: DrawRectangle.cpp  DrawRectangle.h  DrawTriangle.cpp  DrawTriangle.h  Shader.cpp  Shader.h
src/ui/: FontManager.cpp  FontManager.h
src/ui/views/: FileView.cpp  FileView.h  ResultView.cpp  ResultView.h  VideoView.cpp  VideoView.h
src/video/: VideoProcessor.cpp  VideoProcessor.h
tools/: convert_photos_to_video.py  metadata_extractor.py  normalize_filenames.py
